--- a/school/package.json
+++ b/school/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.8",
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.9.0",
+    "cors": "^2.8.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
+    "react-router-dom": "^7.6.2",
     "tailwind-scrollbar": "^4.0.2"
   },
   "devDependencies": {
